# PrinciplesOfDigitalCommunication

./: .gitignore  StudyGuide_g.md  digicomm_book.ipynb  main.py  pyproject.toml
Project1/: project1.py
Project2/: ~$ISAC_6G_Presentation.pptx
