[project]
name = "principlesofdigitalcommunication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pip>=26.0.1",
    "pypandoc>=1.17",
    "scipy>=1.17.1",
]
